# pyfocs

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  .travis.yml0  CHANGELOG.md  DTS_archiver_testnb.ipynb  DTS_archiver_testnb.py  LICENSE  MANIFEST.in  PyFOX.py  README.md  Ultima_archiver.bat  config_muppet_archiver.yml  dependencies.txt  dts_archiver.py  dtsarch.py  example_config.yml  example_config_UBT_windtunnel.yml  flyfox_config1.yml  muppet_archiver.bat  muppet_archiver.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
HHarp2011_archive/: BPP_Ultima_archive.bat  BPP_Ultima_archive_HHarp2011.bat  BPP_Ultima_archive_HHarp2011_deleteold.bat  BPP_Ultima_archive_HHarp2011_manual.bat  BPP_Ultima_archive_Mapping.bat  BPP_Ultima_archive_deleteold.bat  BPPmet.bat  fortest.bat  test.bat
HHarp2011_archive/UltraVNC/: Readme.txt  SecureVNCPlugin.dsm  Whatsnew.txt  ultravnc.ini
HHarp2011_archive/UltraVNC/driver/: install.bat  install_silent.bat  license.txt  uninstall.bat  uninstall_silent.bat
HHarp2011_archive/Unison/: unison_backup.bat
HHarp2011_archive/Unison/.unison/: HHArchive_backup.prf  araf9be8  arcc4c33  default.prf  fpcc4c33
HHarp2011_archive/logmein/: WapClients.cfg
Unison/: unison_backup_mobile.bat
Unison/.unison/: HHArchive_backup_mobiledisk.prf  ar1182e7  ar46bb39  fp46bb39  fpaf9be8
Unison/libs/: HHArchive_backup.prf
bmmflux/: read_bmmflux.py
btmm_process/: BoGHarp2017.yml  __init__.py  btmm_config.yml  calibrate.py  calibrate_fast.py  driver.py  dts_plots.py  dtsarch.py  flyfox.py  labeler.py  readDTS.py  testLocationLib.yml  wind_speed.py  xr_helper.py
btmm_process/dtsarch/: DTS_archiver_EBG2017_datacleanup.ipynb  DTS_archiver_testnb.ipynb  dtsarch.py  setup.py  test_dtsarch_script.txt
btmm_process/example/: pyfox_example_data.ipynb
btmm_process/metdata/: dates.py  rotate_wind.py  turb_analysis.py  waldschrat.py
ci/templates/: .travis.yml
data/: northsimba.ipynb
data/notebooks/: pyfocs_ex2_calibcheck.html  pyfocs_ex3_finalcheck.html
dts_process/: __init__.py  readDTS.py
dtsarch/: dtsarch.py  test_dtsarch_script.py
example/: example_configuration.yml  pyfocs_ex1_rawdatacheck.html  pyfocs_ex1_rawdatacheck.ipynb  pyfocs_ex2_calibcheck.ipynb  pyfocs_ex3_finalcheck.ipynb  pyfox_example_data.ipynb
example/final/: example_final_channel 1_20190722-0000_heated.nc  example_final_channel 1_20190722-0000_unheated.nc
example/notebooks/: pyfocs_ex1_rawdatacheck.ipynb  pyfocs_ex2_calibcheck.ipynb
muppet_archiver/: muppet_archiver.bat  muppet_archiver.py
notebooks/: pyfocs_ex1_rawdatacheck.html  pyfocs_ex1_rawdatacheck.ipynb  pyfocs_ex2_calibcheck.html  pyfocs_ex2_calibcheck.ipynb  pyfocs_ex3_finalcheck.html  pyfocs_ex3_finalcheck.ipynb
silixa_archiver/: config_silixa_archiver.yml  silixa_archiver.bat  silixa_archiver.py
src/pyfocs/: __init__.py  align.py  calibrate.py  check.py  data.py  dts_plots.py  dtsarch.py  labeler.py  layer_detect.py  readDTS.py  stats.py  wind_speed.py  xr_helper.py
test/data/: example_configuration.yml
tests/: examples.py  test_PyFOX.py  test_dataread.py
tests/data/: example_configuration.yml  example_configuration_steelfiber.yml  example_configuration_twistedpair.yml  example_configuration_twistedpair_multi.yml  example_configuration_twistedpair_p1_matrix.yml  example_configuration_twistedpair_p2_matrix.yml  example_twistedpair_bothwls.yml  example_twistedpair_p1wls.yml  example_twistedpair_p2wls.yml  example_twistedpair_v2_bothwls.yml  example_twistedpair_v2_p1cal.yml  example_twistedpair_v2_p1matrix.yml  example_twistedpair_v2_p2cal.yml
(+106 files in other folders)
