[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[options]
python_requires = >= 3.6

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py

addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = dtscalibration
default_section = THIRDPARTY
forced_separate = test_dtscalibration
not_skip = __init__.py
skip = migrations
